# dotfiles

./: .gitignore  README.md
Positron/.config/Positron/User/: settings.json
alacritty/.config/alacritty/: alacritty.toml
alacritty/.config/alacritty/themes/: nord.toml
bash/: .bash_profile  .bashrc
editorconfig/: .editorconfig
fd/.config/fd/: fd.toml  ignore
git/: .gitconfig  .gitignore
inputrc/: .inputrc
nushell/.config/nushell/: config.nu  env.nu
nvim/.config/nvim/: init.lua  lazy-lock.json  nvim-pack-lock.json
nvim/.config/nvim/after/compiler/: lua.vim  python.vim
nvim/.config/nvim/after/ftplugin/: dap-repl.lua  elixir.lua  haskell.lua  lua.lua  mail.lua  markdown.lua  python.lua  r.lua  readline.lua  sh.lua  sql.lua  tex.lua  text.lua  yaml.lua
nvim/.config/nvim/lsp/: basedpyright.lua  bashls.lua  dockerls.lua  expert.lua  harper_ls.lua  jsonls.lua  lua_ls.lua  marksman.lua  pyright.lua  r_language_server.lua  ruff.lua  sqlls.lua  taplo.lua  tombi.lua  ty.lua  yamlls.lua
nvim/.config/nvim/lua/: autocommands.lua  global_variables.lua  icons.lua  lsp.lua  options.lua  usercommands.lua  utils.lua  vimpack.lua
nvim/.config/nvim/plugin/: 001_utils.lua  010_options.lua  015_autocommands.lua  020_usercommands.lua  025_filetypes.lua  030_keymaps.lua  035_lsp.lua  100_colorscheme.lua  200_plugin_deps.lua  210_icons.lua  210_treesitter.lua  220_icons.lua  220_snacks.lua  300_snacks.lua  310_git.lua  320_blink.lua  330_slimline.lua  340_substitute.lua  350_marks.lua  360_surround.lua  370_ai.lua  380_mason.lua  390_schemastore.lua  900_aerial.lua  900_dap.lua  900_formatting.lua  900_linting.lua  900_markdown.lua  900_marks.lua  900_mason.lua  900_neogen.lua  900_neotest.lua  900_opencode.lua  900_persistence.lua  900_splitjoin.lua  900_substitute.lua  aerial.lua  ai.lua  dap.lua  linting.lua  (+7 more)
nvim/.config/nvim/project/: .nvim.lua  template_nvim.lua
nvim/.config/nvim/snippets/: lua.json  markdown.json  package.json  quarto.json  r.json
nvim/.config/nvim/templates/: template_jira.qmd  template_jupyter.qmd  template_notes.qmd  template_presentation.qmd  template_r.qmd
pyproject/: pyproject.toml  requirements_dev.txt
python_tooling/: pyproject.toml  requirements_dev.txt
r/.config/r/: .Renviron  .Rprofile
ripgrep/.config/ripgrep/: ripgreprc
starship/.config/: starship.toml
tmux/: .tmux.conf
vale/.config/vale/: .vale.ini
vim/: .vimrc
vim/.vim/after/compiler/: flake8.vim  pylint.vim  python.vim  r.vim
vim/.vim/after/ftplugin/: haskell.vim  lua.vim  mail.vim  markdown.vim  python.vim  r.vim  readline.vim  sh.vim  sql.vim  tex.vim  text.vim  vim.vim  yaml.vim
visidata/.config/visidata/: config.py
win/.config/win/: Microsoft.PowerShell_profile.ps1  autohotkey_hhkb_win_wsl.ahk  autohotkey_uhk_win.ahk  windows_terminal_settings.json
(+117 files in other folders)
