[project]
name = "example"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.12"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.basedpyright]
typeCheckingMode = "off" # off, basic, standard, strict, all
ignore = ["*"]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
fix = false
exclude = [
  ".eggs",
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  ".vscode/",
  ".vscode-oss/",
  "build",
  "dist",
  "venv",
  "Dropbox/",
  "projects/",
  "node_modules",
  "site-packages",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D407",
  "T201",
  "ERA",
  "ERA001",
  "E501",
  "D406",
  "RET504",
  "PLR2004",
  "PD901",
  "PLR0913",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# TODO: use ruff LSP for python formatting (ruff format via ruff LSP currently don't cover all use cases)
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers -ra -q"
testpaths = ["tests"]

[tool.ty.environment]
# python = "./.venv"
python-version = "3.12"
