[project]
name = "example"
version = "0.1.0"
description = "..."
readme = "README.md"
requires-python = ">=3.13"

[tool.basedpyright]
typeCheckingMode = "off"  # off, basic, standard, strict, all
ignore = ["*"]

[tool.pytest.ini_options]
addopts = "--strict-markers -ra -q -v"
minversion = "8.0"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 88
indent-width = 4
fix = false
exclude = [
  ".eggs",
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  ".vscode/",
  ".vscode-oss/",
  "build",
  "dist",
  "venv",
  "Dropbox/",
  "projects/",
  "node_modules",
  "site-packages",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D407",
  "T201",
  "ERA",
  "ERA001",
  "E501",
  "D406",
  "RET504",
  "PLR2004",
  "PD901",
  "PLR0913",
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "FBT", "PLR2004", "S311"]

[tool.ruff.format]
# TODO: use ruff LSP for python formatting (ruff format via ruff LSP currently don't cover all use cases)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty.environment]
python = "./.venv"
python-version = "3.13"
# root = ["./app"]
# root = ["./src/project"]

[tool.ty.rules]
# division-by-zero = "ignore"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
